--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+main{
+    width: 1320px; /* Add units */
+}
 
+main{
+    margin: auto auto;
+}
 .title{
 font-size: 32px;
 color: rgb(229, 205, 205);
@@ -31,12 +38,42 @@ margin: 0%;
     display: flex; /* Make the header a flex container */
     justify-content: center; /* Center items horizontally */
    /* align-items: center; /* Center items vertically */
-    background-color: antiquewhite;
-    background-image: url('images/Banner Image.png');
+   
+    background-image:  url('/images/Banner Image.png');
     background-size: cover;
     background-position: center;
     height: 600px;
-    width: 1320px; /* Add units */
+   
     border-radius: 5px;
-    margin: auto auto;
+    
+}
+
+.offer{
+    display: flex;
+    flex-direction: column ;
+    align-items: center;
+    margin-top:100px;
+}
+.offerHeader{
+    font-family: "Inter", sans-serif;
+    font-weight: bold;
+    font-size: 88px;
+    color: red;
+   
+
+}
+.offerparagraph{
+    font-family: "Inter", sans-serif;
+    font-weight: medium;
+    font-size: 24px;
+    color: red;
+    margin-top: 48px;
+}
+.offerSubheader{
+    font-family: "Inter", sans-serif;
+    font-weight:bold;
+    font-size: 48px;
+    margin-top: 16px;
+   
+
 }
