--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
-main{
-    width: 1320px; /* Add units */
-}
 
+
+*{margin-bottom: 40px;}
 main{
-    margin: auto auto;
+   
+    width: 1320px;
+   
 }
 .title{
 font-size: 32px;
@@ -42,6 +43,7 @@ margin: 0%;
     background-image:  url('/images/Banner Image.png');
     background-size: cover;
     background-position: center;
+    width: 1320px;
     height: 600px;
    
     border-radius: 5px;
@@ -53,6 +55,9 @@ margin: 0%;
     flex-direction: column ;
     align-items: center;
     margin-top:100px;
+    height: 806;
+    width: 802;
+    margin: auto auto;
 }
 .offerHeader{
     font-family: "Inter", sans-serif;
@@ -76,4 +81,83 @@ margin: 0%;
     margin-top: 16px;
    
 
+}
+
+.party{
+    color: white;
+    background-image: url('/images/Vectorrr.png');
+  
+    background-repeat: no-repeat;
+    background-position: cover;
+    display: flex;
+    width: 1320px;
+    height: 600px;
+    align-items: center;
+    padding-left: 150px;
+    padding-top: 50px;
+    border-radius: 5px;
+   
+}
+
+.paryDetails{
+    display:flex;
+    flex-direction: column;
+    align-items:left;
+}
+
+.partyHeader{
+    font-family: "Merriweather", serif;
+    font-size: 64px;
+    width: 642px;
+    height: 176px;
+}
+.partyParagraph{
+    width: 697px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 18px;
+
+}
+
+.partySubHeader{
+    font-family: "Inter", sans-serif;
+    font-weight: 20px;
+ 
+}
+
+.eventDetails{
+    border-style: outset;
+    border-radius: 5px;
+    height: 482px;
+    width: 1320px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center ;
+    text-align: center;
+}
+.detailHeading{
+color: red;
+
+}
+
+.eventDetails h3{
+    font-family: "Inter", sans-serif;
+    font-size: 32;
+    font-weight: 700;
+    
+   
+   
+}
+.btn{
+    background-color: red;
+    color: white;
+    font-size: 20px;
+    font-family: "Inter", sans-serif ;
+    font-weight: bold;
+    border-radius: 5px;
+    padding: 10px;
+
+}
+
+.btnDiv{
+    margin-top: 45px;
 }
